styles/components/chat-input/index.scss
#chat-input {
    background-color: $message-input-bg-color;
    max-width: 410px;
    min-height: 125px;
    width: 100%;
    display: flex;
    align-self: flex-start;
    flex-direction: column;
    justify-content: space-between;
    box-shadow: $global-shadow;
    border-radius: $border-radius;
    padding: 5px 20px;
    &.disabled {
        opacity: 0.45;
    }
    .text-field-container {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        border-bottom: 2px solid $message-input-border-color;
        width: 100%;
        .input {
            textarea {
                @include font-family(18px, $message-input-text-color, 100);
                &::placeholder {
                    transform: translateY(55px);
                }
            }
            max-width: 360px;
            width: 100%;
        }
        .btn-container {
            display: flex;
            flex-direction: column;
            justify-content: flex-end;
            .done {
                background-color: $message-input-done-bg-color;
                max-width: 56px;
                padding: 2px;
                border-radius: $border-radius;
                width: 100%;
                box-shadow: $global-shadow;
                margin-bottom: 10px;
                span {
                    @include font-family(12px, $message-input-done-text-color);
                }
            }
        }
        
    }
    .information-tip {
        display: flex;
        flex-direction: row;
        p {
            @include font-family(10px, $message-input-information-tip-color);
        }
    }
}

